fix alignment for active link

--- a/src/css/lesson/LessonLink.scss
+++ b/src/css/lesson/LessonLink.scss
@@ -31,7 +31,7 @@
   border: none;
 }
 
-.lesson-link .link .video-length {
+.lesson-link .video-length {
   float: right;
 }
 
@@ -45,5 +45,5 @@
 
 
 .lesson-link .active-video p{
-  display: inline;
+  width: 100%;
 }
